--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -18,10 +18,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #F1F1F1;
+  background-color: #660066;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  font-size: 0.8em;
-  color:#363636;
+  font-size: 1 em;
+  color:#CCFF33;
 }
 
 #container {
@@ -36,7 +36,7 @@ body {
   background-image: url(../gfx/headerbkg.png);
   background-repeat: repeat-x;
   padding-top: 30px;
-  box-shadow: 3px 3px 15px #d5d5d5;
+  box-shadow: 10px 10px 45px #99FF33;
 }
 #content {
   float: left;
@@ -80,7 +80,7 @@ a:hover {
   text-decoration: underline;
 }
 h1 {
-  color:#243446;
+  color:#CC0000;
   font-size: 2.25em;
 }
 h2 {
