--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -18,7 +18,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #660066;
+  background-color: #FFFFFF;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size: 1 em;
   color:#CCFF33;
